# zaqathon

./: .gitignore  README.md  env.example  main.py  pyproject.toml  requirements.txt
.cursor/rules/: codingstandards.mdc
core/: __init__.py  exceptions.py  interfaces.py  models.py
data_sources/: __init__.py  catalog_csv.py
parsing/: __init__.py  email_data.py  email_parser.py
processing/: __init__.py  llm_factory.py  order_bundler.py  order_processor.py
prompts/: __init__.py  email_extraction.py
scripts/: setup.py
tests/: conftest.py  test_data.py  test_parser.py  test_processor.py  test_validators.py
ui/: __init__.py  config.py  display.py
validation/: __init__.py  catalog_validator.py  result.py
